[gd_scene load_steps=5 format=3 uid="uid://d0lgfe3nmh2ok"]

[ext_resource type="Script" path="res://Scenes/Bolt/bolt.gd" id="1_4c75s"]
[ext_resource type="Texture2D" uid="uid://ugw3if7kjwtb" path="res://Assets/bolt.png" id="2_coquk"]
[ext_resource type="PackedScene" uid="uid://2vrljdef6ct2" path="res://Scenes/EnvironmentalState/environmental_state.tscn" id="3_p8iok"]

[sub_resource type="CircleShape2D" id="CircleShape2D_36mqg"]
radius = 22.0227

[node name="Bolt" type="Area2D" groups=["player_dmg_projectile"]]
collision_mask = 9
script = ExtResource("1_4c75s")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_coquk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_36mqg")

[node name="EnvironmentalState" parent="." instance=ExtResource("3_p8iok")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
